HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestAttributeWrongTarget/Source/Main.uv
//! Rejected source-native test attribute specimen for a non-procedure target.

[[test]]
public record TestAttributeWrongTarget {
    public value: i32
}
